--- a/assets/produtos.css
+++ b/assets/produtos.css
@@ -89,8 +89,9 @@ footer {
 /* página de contato */
 
 main {
-    width: 940px;
-    margin: 0 auto;
+    width: 980px;
+    margin: auto;
+    padding: 40px 25px;
 }
 
 form {
@@ -101,6 +102,10 @@ form label, form legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
+}
+
+form fieldset {
+    margin: 15px 0;
 }
 
 .input-padrao {
@@ -114,3 +119,36 @@ form label, form legend {
     margin: 20px 0;
 }
 
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    margin: 30px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: darkorange;
+    transform: scale(1.1);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: #555555;
+    color: white;
+    font-weight: bold;
+}
+
+th, td {
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
