--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,9 +1,13 @@
+body {
+    font-family: 'Montserrat', 'sans-serif';
+}
+
 header {
 	background: #BBBBBB;
 	padding: 20px 0;
 }
 
-.caixa {
+.container {
 	position: relative;
 	width: 940px;
 	margin: 0 auto;
@@ -68,11 +72,11 @@ nav a:hover {
 	font-weight: bold;
 }
 
-.produto-descricao {
+.desc-prod {
 	font-size: 18px;
 }
 
-.produto-preco {
+.prod-preco {
 	font-size: 22px;
 	font-weight: bold;
 	margin-top: 10px;
@@ -80,7 +84,7 @@ nav a:hover {
 
 footer {
 	text-align: center;
-	background: url("bg.jpg");
+	background: url("./images/bg.jpg");
 	padding: 40px 0;
 }
 
@@ -90,17 +94,14 @@ footer {
 	margin: 20px 0 0;
 }
 
-main {
-	width: 940px;
-	margin: 0 auto;
-}
+/* estilização página de contato */
 
 form {
 	margin: 40px 0;
 }
 
 form label, form legend {
-	display:block;
+	display: block;
 	font-size: 20px;
 	margin: 0 0 10px;
 }
@@ -147,4 +148,100 @@ thead {
 td, th {
 	border: 1px solid #000000;
 	padding: 8px 15px;
+}
+
+/* estilização página inicial */
+
+.banner {
+    width: 100%;
+}
+
+.titulo-principal {
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+}
+
+.titulo-principal::first-letter {
+    font-weight: bold;
+}
+
+p::first-line {
+    font-style: italic;
+}
+
+.principal {
+    padding: 3em 0;
+    background: #fefefe;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.principal p {
+    margin: 0 0 1em;
+}
+
+.principal strong {
+    font-weight: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.utensilios {
+    width: 150px;
+    float: left; /* float serve para que o elemento se destaque na tela, deixe de ocupar o espaço em que estava, para que os outros elementos possam se posicionar ao redor dele */
+}
+
+.beneficios {
+    padding: 3em 0;
+    background: #888888;
+}
+
+.conteudo-beneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.lista-beneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens {
+    line-height: 1.5;
+}
+
+.itens:first-child {
+    font-weight: bold;
+}
+
+.itens::before {
+    content: "▸";
+}
+
+.img-beneficios {
+    width: 60%;
+}
+
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888);
+}
+
+.conteudo-mapa {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.video {
+    width: 560px;
+    margin: 2em auto;
 }
